# M-VSLAM

./: .clangd  .gitignore  CMakeLists.txt  README.md
config/: kitti_00.yaml  kitti_00_old.yaml
inc/: algorithm.h  backend.h  feature.h  frame.h  frame_base.h  frontend.h  g2o_types.hpp  key_frame.h  map.h  map_base.h  map_point.h  ui_pangolin.h
ros/: CMakeLists.txt  slam.cpp
ros/src/kitti2bag/: CMakeLists.txt  kitti2bag.cpp  package.xml
ros/src/slam/: CMakeLists.txt  package.xml  slam.cpp
ros/src/slam_msg/: CMakeLists.txt  package.xml
ros/timed_synthetic_bag/: metadata.yaml  timed_synthetic_bag_0.mcap
src/: CMakeLists.txt  Config.cmake.in
src/backend/: CMakeLists.txt  backend.cpp  backend.h
src/frontend/: CMakeLists.txt  camera.cpp  frontend.cpp  frontend.h  frontend_init.cpp  frontend_optimize.cpp  frontend_show.cpp  frontend_template.hpp  frontend_track.cpp  frontend_utils.cpp
src/loop_closing/: CMakeLists.txt  binary_descriptor.cpp  binary_descriptor.h  binary_index.h  binary_tree.h  binary_tree_node.cpp  binary_tree_node.h  island.h  lcdetector.cpp  lcdetector.h  loop_closing.cpp  loop_closing.h  priority_queues.h
src/types/: CMakeLists.txt  camera.h  class.drawio  feature.cpp  frame.cpp  frame_base.cpp  frame_base.h  g2o_types.hpp  key_frame.cpp  key_frame.h  map.cpp  map.h  map_point.cpp  map_point.h
src/ui/: CMakeLists.txt  ui_pangolin.cpp  ui_pangolin.h  ui_pangolin_point_cloud.cpp
src_modules/: CMakeLists.txt
src_modules/frontend/: CMakeLists.txt  detect.ixx  frontend.ixx
src_modules/types/: CMakeLists.txt  camera.ixx  core.ixx  feature.ixx  frame.ixx  frame_base.ixx  g2o_types.ixx  key_frame.ixx  map.ixx  map_point.ixx  triangulate.ixx
src_modules/ui/: CMakeLists.txt  ui_pangolin.ixx
test/: CMakeLists.txt  test_core.cpp  test_frontend.cpp  test_lc.cpp  yaml.cpp
